--- a/frontend/ReportIncidents/.env.example
+++ b/frontend/ReportIncidents/.env.example
@@ -1,2 +1,10 @@
-VITE_API_URL=http://localhost:5000
+# API Configuration
+VITE_API_URL=http://localhost:5000/api
 VITE_SOCKET_URL=http://localhost:5000
+
+# Frontend App URLs (Use relative paths for production)
+VITE_MAP_PUBLIC_URL=/map
+VITE_INCIDENT_ADMIN_URL=/admin/incidents
+VITE_MISSION_ADMIN_URL=/admin/missions
+VITE_REPORT_INCIDENTS_URL=/report-incident
+VITE_LANDING_PAGE_URL=/
