--- a/frontend/LocationPopup/netlify.toml
+++ b/frontend/LocationPopup/netlify.toml
@@ -10,3 +10,6 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  # Set these in Netlify UI: Site settings > Environment variables
+  # VITE_API_URL = "https://your-backend-url.com/api"
+  # VITE_MAP_PUBLIC_URL = "https://aegis-map.netlify.app"
