--- a/frontend/Landing Page/netlify.toml
+++ b/frontend/Landing Page/netlify.toml
@@ -10,3 +10,10 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  # Set these in Netlify UI: Site settings > Environment variables
+  # VITE_API_URL = "https://your-backend-url.com/api"
+  # VITE_MAP_PUBLIC_URL = "https://aegis-map.netlify.app"
+  # VITE_INCIDENT_ADMIN_URL = "https://aegis-incident-admin.netlify.app"
+  # VITE_MISSION_ADMIN_URL = "https://aegis-mission-admin.netlify.app"
+  # VITE_REPORT_INCIDENTS_URL = "https://aegis-report.netlify.app"
+  # VITE_LANDING_PAGE_URL = "https://aegis-landing.netlify.app"
