--- a/frontend/mapPublic/netlify.toml
+++ b/frontend/mapPublic/netlify.toml
@@ -10,3 +10,7 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  # Set these in Netlify UI: Site settings > Environment variables
+  # VITE_API_URL = "https://your-backend-url.com/api"
+  # VITE_REPORT_INCIDENTS_URL = "https://aegis-report.netlify.app"
+  # VITE_LANDING_PAGE_URL = "https://aegis-landing.netlify.app"
